--- a/Frontend/src/app.css
+++ b/Frontend/src/app.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    html {
+        text-rendering: optimizeLegibility;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        
+        min-height: 100%;
+
+        @apply dark:text-white text-black dark:bg-neutral-900 bg-neutral-200;
+    }
+}
